# adk-banking-bot

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  app_streamlit.py  config.py  pyproject.toml  pytest.ini  requirements.txt  runner.py
agents/: __init__.py  balance_agent.py  farewell_agent.py  greeting_agent.py  root_agent.py  transfer_agent.py
callbacks/: __init__.py  before_model.py  before_tool.py
monitoring/: __init__.py  alerts.py  analytics_service.py  logger.py  metrics_collector.py  performance_tracker.py  usage_reporter.py
sessions/: session_service.py
templates/: index.html
tests/: conftest.py
tests/test_agents/: test_balance_agent.py  test_farewell_agent.py  test_greeting_agent.py  test_root_agent.py  test_transfer_agent.py
tests/test_api/: test_chat_endpoints.py
tests/test_callbacks/: test_before_model.py  test_before_tool.py
tests/test_monitoring/: test_alerts.py  test_analytics_service.py  test_logger.py  test_metrics_collector.py  test_performance_tracker.py  test_usage_reporter.py
tests/test_sessions/: test_session_service.py
tests/test_tools/: test_finance_advisor.py  test_get_balance.py  test_transfer_money.py
tools/: __init__.py  finance_advisor.py  get_balance.py  transfer_money.py
